--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+:root {
+    /* FONTS */
+    --f600: #9798A1;
+    --f400: #EDEDED;
+
+    /* BACKGROUND */
+    --bg-nav: #0F111C;
+    --bg-page: #212227;
+
+}
+
 * {
     padding: 0%;
     margin: 0%;
@@ -6,97 +17,127 @@
 
 }
 
-body {
-    background-color: #8BC6EC;
-    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
-    ;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
+/* FULL PAGE NAVIGATION */
 
-/*//////////////////// NAVIGATION ///////////*/
 nav {
-    padding: 10px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-nav ul {
-    display: flex;
-    flex-direction: row;
-}
-
-nav ul li {
-    display: block;
-    padding: 10px;
-}
-
-.li-a {
-    text-decoration: none;
-    color: rgb(36, 34, 34);
-    font-size: 20px;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--bg-nav);
     position: relative;
 }
 
-li:hover {
-    opacity: 90%;
-}
-
-
-.li-a::after{
-    content: "";
+nav h1{
     position: absolute;
+    color: var(--f400);
+    left: 20px;
+    top: 10px;
+    font-size: 2ch;
+}
+
+nav .tagline {
+    position: absolute;
+    left: 20%;
+    top: 35%;
+    font-size: 10ch;
+    font-weight: 600;
+    color: var(--f600);
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
+
+.nav-ctn {
+    position: absolute;
+    width: 80px;
+    height: 100px;
+    top: 40%;
+    left: 1%;
+
+    /* nav btn position */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#nav-btn {
+    z-index: 5;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+
+    /* before and after position */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 500ms;
+}
+
+#nav-btn:hover {
+    background: rgba(255, 0, 0, 0.582);
+}
+#nav-btn.active {
+    background: rgba(255, 0, 0, 0.582);
+}
+
+#nav-btn::before {
+    content: '';
+    position: absolute;
+    width: 28px;
     height: 2px;
-    width: 100%;
-    opacity: 80%;
-    background-color: rgb(36, 34, 34);
-    left: 0%;
-    bottom: 0%;
-    transform: scalex(0);
-    transform-origin: left;
-    transition: transform 500ms ease;
-    
+    background: cornsilk;
+    transform: translateY(-10px);
+    transition: 500ms;
+    box-shadow: 0 10px 0 cornsilk ;
+    /* left: 50%;
+    top:25%;
+    transform: translate(-50%); */
 }
-li:hover .li-a::after{
-    transform: scaleX(1);
+#nav-btn.active::before {
+    box-shadow: 0 0 0 cornsilk ;
+    transform: translateY(0px) rotate(45deg);
 }
 
+#nav-btn::after {
+    content: '';
+    position: absolute;
+    width: 28px;
+    height: 2px;
+    background: cornsilk;
+    transform: translateY(10px);
+    transition: 500ms;
+    /* left: 50%;
+    top:25%;
+    transform: translate(-50%); */
+}
 
+#nav-btn.active::after {
+    box-shadow: 0 0 0 cornsilk ;
+    transform: translateY(0px) rotate(-45deg);
+}
 
-@media (max-width: 600px){
-    nav {
-        width: 100%;
-        display: flex;
-        justify-content: left;
-    }
-    nav .navbar {
-        margin: 2px;
-        padding: 0px 10px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
+/* PAGE NAVIGATION */
 
-    span {
-        margin: 3px;
-        height: 1px;
-        width: 30px;
-        background-color: black;
-        transition: 500ms ease;
-    }
+.page {
 
-    .navbar:hover span {
-        background-color: blanchedalmond;
-    }
+    width: 100vw;
+    height: 100vh;
+    background: var(--bg-page);
+    transform: translateX(-120%);
+    transition: transform 1000ms ease;
+   
+}
 
-    .navbar:hover {
-        opacity: 90%;
-        cursor: pointer;
-    }
+.page.active {
+    transform: translateX(0%);
+    position: absolute;
+    z-index: 2;
 
-
-
-    nav ul {
-        display: none;
-    }
 }
