--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     --bg-nav: #0F111C;
     --bg-page: #121526;
 
+    /* BUTTON */
+    --btn-still :var(--bg-nav);
+    --btn-hover : rgba(255, 0, 0, 0.582);
+
 }
 
 
@@ -39,14 +43,27 @@ nav {
 nav h1{
     position: absolute;
     color: var(--f400);
-    left: 20px;
-    top: 10px;
+    left: 4%;
+    top: 20px;
     font-size: 2ch;
     font-weight: 500;
     /* z-index: 3; */
 }
 
+nav .version{
+    position: absolute;
+    left: 4%;
+    top: 94%;
+    color: var(--f400);
+    letter-spacing: 2px;
+    font-size: 16px;
+    opacity: 70%;
+    font-style: italic;
+    /* background-color: seagreen; */
+}
+
 nav .tagline {
+    /* display: none; */
     position: absolute;
     left: 18%;
     top: 50%;
@@ -56,17 +73,35 @@ nav .tagline {
     color: var(--f600);
     letter-spacing: 5px;
     text-transform: uppercase;
+
+    
+
+    animation: tagline 2000ms;
 }
+
+@keyframes tagline {
+    0% {opacity:0;}
+    100% {opacity:1;}
+  }
 
 .tagline::after {
     position: absolute;
     top: 0%;
     left: 75%;
     content: '';
-    width: 25%;
+    width: 170px;
     height: 2px;
     background: sandybrown;
+    left: 75% ;
+    transform: scaleX(0);
+    transform-origin: 80%;
+    transition: transform 1000ms ease;
 }
+
+.slide.tagline::after{
+    transform: scaleX(1);
+}
+
 
 .nav-ctn {
     z-index: 4;
@@ -166,8 +201,8 @@ nav .tagline {
 .page .logo{
     position: absolute;
     color: var(--f400);
-    left: 20px;
-    top: 10px;
+    left: 4%;
+    top: 20px;
     font-size: 2ch;
     font-weight: 500;
 }
@@ -205,13 +240,14 @@ nav .tagline {
     right: 2%;
     top: 50%;
     transform: translateY(-50%);
-    height: fit-content;
-    width: 50%;
+    max-height: 90vh;;
+    width: 55%;
     background: var(--bg-nav);
     border: none;
-    border-top-right-radius: 15%;
-    border-bottom-left-radius: 15%;
-    /* overflow-y: scroll; */
+    /* border-top-right-radius: 15%; */
+    /* border-bottom-left-radius: 15%; */
+    overflow-y:auto;
+    padding: 20px 20px;
     
 
     /* DETAILS POSITION */
@@ -249,6 +285,10 @@ nav .tagline {
     color: var(--f600);
 }
 
+.span-hide{
+    display: none;
+}
+
 .photo img {
     height: 300px;
     width: 300px;
@@ -262,7 +302,7 @@ nav .tagline {
 }
 
 .nav-det .not:hover{
-    color: black;
+    color: var(--f600);
     cursor:text;
 }
 
@@ -272,14 +312,16 @@ nav .tagline {
     font-size: 18px;
     height: 40%;
     line-height: 30px;
+    text-align: justify;
 }
 
 .container.show{
     display: flex;
 
       /* FADE IN ANIMATION */
-    animation: fadeIn 1000ms;
+    animation: fadeIn 800ms;
 }
+
 @keyframes fadeIn {
     0% {opacity:0;}
     100% {opacity:1;}
@@ -288,6 +330,7 @@ nav .tagline {
 
 /* RESUME DOWNLOAD */
 .download {
+    
     color: var(--f400);
     font-size: 18px;
     margin: 30px 0px;
