--- a/skill.css
+++ b/skill.css
@@ -32,22 +32,30 @@
 .log{
     height: 150px;
     width: 100px;
-    margin: 20px 20px;
+    margin: 0px 20px;
+    /* background-color: var(--bg-nav); */
     /* background-color: rgb(2,0,36);
     background-color: radial-gradient(circle, rgba(2,0,36,1) 13%, rgba(9,9,121,1) 43%, rgba(0,212,255,1) 100%); */
-    box-shadow: 5px 5px 4px 4px;
+    /* box-shadow: 5px 5px 4px 4px; */
+    
 }
 
-.log-det{
-    font-size: 12px;
-    letter-spacing: 2px;
+
+.log-det-ul li{
+    margin: 5px 10px;
+    list-style: disc;
+    font-size: 16px;
+    text-align: left;
+    color: var(--f600);
+}
+
+.myskill h2 {
     color: var(--f400);
     text-align: center;
-}
-
-.log-det span{
-    font-size: 30px;
-    color: var(--f600);
+    margin: 10px 0px;
+    letter-spacing: 3px;
+    outline: var(--f600) 1px solid;
+    padding: 10px 20px;
 }
 
 .title-code, .title-no-code {
@@ -58,42 +66,54 @@
 
 /* PHOTOS */
 .html{
+    background-color: var(--bg-nav);
     background-image: url(img/logo/HTML5_Logo.svg);
     background-position: center;
     background-repeat: no-repeat;
+    background-blend-mode: soft-light;
 }
 
 .css{
+    background-color: var(--bg-nav);
     background-image: url(img/logo/CSS3_logo.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    background-blend-mode: soft-light;
 }
 
 .js{
+    background-color: var(--bg-nav);
     background-image: url(img/logo/Javascript_Logo.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    background-blend-mode:soft-light;
 }
 
 .php{
+    background-color: var(--bg-nav);
     background-image: url(img/logo/PHP-logo.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    background-blend-mode: soft-light;
 }
 
 .glide{
+    background-color: var(--bg-nav);
     background-image: url(img/logo/glide\ logo.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    background-blend-mode:soft-light;
 }
 
 .bubble{
+    background-color: var(--bg-nav);
     background-image: url(img/logo/bubble.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    background-blend-mode: soft-light;
 }
