--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ nav .tagline {
     font-weight: 500;
 }
 
-.page ul {
+.page .nav {
     list-style: none;
     position: absolute;
     top: 50%;
@@ -215,7 +215,7 @@ nav .tagline {
     transform: translateY(-50%);
 }
 
-.page ul li{
+.page .nav .btn{
     padding: 10px;
     color: var(--f600);
     font-size: 8ch;
@@ -223,12 +223,12 @@ nav .tagline {
     font-weight: 400;
 }
 
-.page ul li:hover {
+.page .nav .btn:hover {
     cursor: pointer;
     color: var(--f400);
 }
 
-.btn.toggle {
+.nav .btn.toggle {
     color: var(--f400);
 }
 
@@ -240,7 +240,7 @@ nav .tagline {
     right: 2%;
     top: 50%;
     transform: translateY(-50%);
-    max-height: 90vh;;
+    max-height: 90vh;
     width: 55%;
     background: var(--bg-nav);
     border: none;
@@ -281,19 +281,38 @@ nav .tagline {
 }
 
 .nav-det p{
+    /* max-width: 500px; */
     display: inline;
     color: var(--f600);
 }
+
+/* .about-mep{
+    max-width: 500px;
+} */
 
 .span-hide{
     display: none;
 }
 
+.about h2 {
+    color: var(--f400);
+    text-align: center;
+    margin: 10px 0px;
+    letter-spacing: 2px;
+    outline: var(--f600) 1px solid;
+    padding: 10px 20px;
+}
+
 .photo img {
-    height: 300px;
-    width: 300px;
+   
+    height: 250px;
+    width: 250px;
     border: none;
     border-radius: 150px;
+}
+
+.photo{
+    margin: 20px 0px;
 }
 
 .nav-det p:hover{
@@ -313,6 +332,7 @@ nav .tagline {
     height: 40%;
     line-height: 30px;
     text-align: justify;
+    max-width: 800px;
 }
 
 .container.show{
@@ -335,7 +355,7 @@ nav .tagline {
     font-size: 18px;
     margin: 30px 0px;
 }
-
+/* 
 .download:hover {
     cursor: pointer;
-}
+} */
