added new sample

--- a/project.css
+++ b/project.css
@@ -74,7 +74,7 @@
     background-image: url(img/gepeet\ pic.png);
 }
 .card.three {
-    background-image: url(img/nissan-silvia-spec-r-dave-thomas-speedhunters-1-1200x800.jpg);
+    background-image: url(img/sample-web.png);
     background-position: center;
 }
 .card.four {
