added new project

--- a/project.css
+++ b/project.css
@@ -78,7 +78,7 @@
     background-position: center;
 }
 .card.four {
-    background-image: url(img/DSC_98671-1200x800.jpg);
+    background-image: url(img/Shoes\ website\ photo.png);
     background-position: center;
 }
 
