--- a/project.css
+++ b/project.css
@@ -14,11 +14,11 @@
     height: 90vh;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+   
     /* max-width: 800px; */
 }
 
-.project h2 {
+.title h2 {
     color: var(--f400);
     text-align: center;
     margin: 10px 0px;
