--- a/project.css
+++ b/project.css
@@ -120,9 +120,24 @@
         hsl(0 0% 0% / 1)
     );
     /* transform-origin: translateY(50%); */
-    transform: translateY(62%);
+    transform: translateY(70%);
     transition: transform 500ms ease;
     
+}
+
+.project-content .techonologies{
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.techonologies .ts{
+    padding: 0 10px;
+    border: none;
+    margin-right: 5px;
+    border-radius: 30px;
+    background-color: rgba(128, 128, 128, 0.342);
+    font-size: small;
 }
 
 .project-content h2{
@@ -133,7 +148,7 @@
 }
 
 .card:hover .project-content{
-    transform: translateY(5%);
+    transform: translateY(6%);
 }
 
 .card-body {
