--- a/project.css
+++ b/project.css
@@ -14,8 +14,6 @@
     height: 90vh;
     display: flex;
     flex-direction: column;
-   
-    /* max-width: 800px; */
 }
 
 .title h2 {
@@ -52,7 +50,8 @@
     flex-direction: column;
     color: var(--f400);
     border-radius: 15px;
-    margin: 15px 15px;
+    margin: 0px 15px;
+    margin-bottom: 50px;
     min-width: 300px;
     width: 80%;
     overflow: hidden;
@@ -159,18 +158,19 @@
 
 .button {
     display: inline-block;
-    margin: 10px 0px;
-    background-color: var(--bg-page);
+    margin-top: 15px;
+    margin-bottom: 20px;
+    background-color: rgba(184, 43, 43, 0.788);
     text-decoration: none;
     /* width: 400px; */
     color: var(--f400);
-    padding: 10px 20px;
+    padding: 5px 20px;
     border-radius: 5px;
 
     transition: 500ms ease;
 }
 
 .button:hover{
-    background-color: var(--btn-hover);
+    background-color: red;
 
 }
