--- a/project.css
+++ b/project.css
@@ -108,6 +108,12 @@
     background-size: 100%;
     
 }
+.card.ten{
+    background-image: url(img/socialMedia.png);
+    background-position: center;
+    background-size: 100%;
+    
+}
 .card:hover{
     background-size: 110%;
     box-shadow: 1px 1px 20px 10px rgba(255, 255, 255, 0.151);
